# actixweb-diesel

./: .env  .env.docker  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yaml
migrations/2024-06-27-103007_create_restaurants/: down.sql  up.sql
migrations/2024-06-27-103025_create_customers/: up.sql
migrations/2024-06-27-103041_create_tables/: up.sql
migrations/2024-06-27-103045_create_reservations/: up.sql
src/: main.rs  schema.rs
src/controllers/: customer_controller.rs  mod.rs  reservation_controller.rs  restaurant_controller.rs  table_controller.rs
src/models/: customer.rs  mod.rs  reservation.rs  restaurant.rs  table.rs
src/services/: customer_service.rs  mod.rs  reservation_service.rs  restaurant_service.rs  table_service.rs
